New 3.1 obj exporter produces invalid "parm" nurbs curve line, resulting in lost "endpoint" curve flag #95360

Closed
opened 2022-01-31 15:55:11 +01:00 by Aras Pranckevicius · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-01-31 07:09, hash: a727692af7
Worked: (newest version of Blender that worked as expected)

Short description of error
The new 3.1 wavefront obj exporter, when exporting curves as NURBS objects, produces somewhat invalid syntax for the parm syntax line: it has parm 0.0 ... but it should have parm u 0.0 .... Missing u makes the syntax invalid.

Now, Blender's curves do not really support arbitrarily spaced knots, so the only thing the parm line is used for, is to detect if the spline should go to the endpoints or not (if it starts with a bunch of zeroes and ends with a bunch of ones, then it goes to the endpoints). Invalid parm line produced by the new exporter is ignored by the current importer, and so it makes it lose the "endpoint on" flag.

Exact steps for others to reproduce the error

  1. Add -> Curve -> NURBS Curve
  2. Object Data -> Active Spline -> turn on Endpoint U checkbox. Notice that the curve now reaches the end points.
  3. Export to obj, make sure to check "Curves as NURBS" option (which is off by default).
  4. Import the resulting obj into an empty scene. If step 3 was exported with old 3.0 exporter, then everything's fine; if it was exported with new 3.1 exporter then the curve as "Endpoint U" off and does not reach the end points.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-01-31 07:09, hash: `a727692af7` Worked: (newest version of Blender that worked as expected) **Short description of error** The new 3.1 wavefront obj exporter, when exporting curves as NURBS objects, produces somewhat invalid syntax for the `parm` syntax line: it has `parm 0.0 ...` but it should have `parm u 0.0 ...`. Missing `u` makes the syntax invalid. Now, Blender's curves do not really support arbitrarily spaced knots, so the only thing the `parm` line is used for, is to detect if the spline should go to the endpoints or not (if it starts with a bunch of zeroes and ends with a bunch of ones, then it goes to the endpoints). Invalid `parm` line produced by the new exporter is ignored by the current importer, and so it makes it lose the "endpoint on" flag. **Exact steps for others to reproduce the error** 1. Add -> Curve -> NURBS Curve 2. Object Data -> Active Spline -> turn on Endpoint U checkbox. Notice that the curve now reaches the end points. 3. Export to obj, make sure to check "Curves as NURBS" option (which is off by default). 4. Import the resulting obj into an empty scene. If step 3 was exported with old 3.0 exporter, then everything's fine; if it was exported with new 3.1 exporter then the curve as "Endpoint U" off and does not reach the end points.
Author
Member

Added subscriber: @aras_p

Added subscriber: @aras_p
Aras Pranckevicius self-assigned this 2022-01-31 15:55:51 +01:00
Author
Member

I think I see the problem, taking this one.

I think I see the problem, taking this one.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by c24b2cdebf

This issue was referenced by c24b2cdebf245a14f766c6f928b4326a5e4032ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95360
No description provided.