Fix T95360, new 3.1 obj exporter losing nurbs curve "endpoint".

The new wavefront .obj exporter in 3.1 was producing slightly invalid parm line syntax (missing u), and was not setting first/last N params to zeroes and ones for curves with "endpoint" flag properly.